--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.8",
+    "axios": "^1.12.2",
     "expo": "~53.0.20",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -29,9 +32,7 @@
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "start": "^5.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-sqlite": "~15.2.14"
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
